[package]
name = "rjvm_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
rjvm_utils = { path = "../utils" }
rjvm_reader = { path = "../reader" }
thiserror = "1"
bitflags = "1.3"
cesu8 = "1.1"
strum = "0.24"
strum_macros = "0.24"
result = "1.0.0"
log = "0.4.17"
test-log = "0.2.11"
env_logger = "*"
int-enum = { version = "0.5.0", features = ["convert"] }
itertools = "0.10.5"
